Bossbar eklendi, İşlem sırası eklendi, Reload düzenlendi  Bossbar eklendi ve artık grupta iseniz bossbar olarak bilgilendiriyor Oyuncu çıktığında grupta olmasa bile gruptaki üyelere mesaj gönderiyordu. Bu sorun düzeltildi. Oyuncular çıktığında grubu boş olarak atama hatası düzeltildi! Sürüm desteği (sanırım)!!

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,7 +15,8 @@ Title: "&7[&cYönetim Sohbet&7]"
 # Kullanılabilecek bazı simgeler "> , ➔ , ➤ , ➞ , ❯ , ❱ , ᐳ ".
 Title-symbol: " &b➤&f"
 Boosbar: "&7[&c&lYönetim Sohbet&7]"
-Boosbar-Color: "&a"
+# BLUE - GREEN - PINK - PURPLE - RED - WHITE - YELLOW
+Boosbar-Color: "YELLOW"
 
 # Oyuncuları ekleme, çıkartma, oyunu terk etme, düzenleme gibi ayarların anlaşılabilir kılması için.
 adding-player: "&bGruba katıldınız!"
